--- a/CybersportTournament/ElementsWindows/PlayerWindow.xaml
+++ b/CybersportTournament/ElementsWindows/PlayerWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CybersportTournament.ElementsWindows"
         mc:Ignorable="d"
-        Title="PlayerWindow"  Height="900" Width="1600" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="Игрок"  Height="900" Width="1600" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Grid>
         <Button Name="BackButton" Content="Назад" HorizontalAlignment="Left" Margin="20,17,0,0" VerticalAlignment="Top" Height="39" Width="140" FontSize="25" Click="BackButtonClick"/>
         <Label Content="Фамилия:" HorizontalAlignment="Left" Margin="140,122,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
