--- a/CybersportTournament/ListWindows/MatchesListWindow.xaml
+++ b/CybersportTournament/ListWindows/MatchesListWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CybersportTournament.ListWindows"
         mc:Ignorable="d"
-        Title="MatchesListWindow" Height="900" Width="1600" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="Список матчей" Height="900" Width="1600" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Grid>
         <Button Name="BackButton" Content="Назад" HorizontalAlignment="Left" Margin="20,17,0,0" VerticalAlignment="Top" Height="39" Width="140" FontSize="25" Click="BackButtonClick"/>
         <DataGrid Name="MatchesList" AutoGenerateColumns="False" Height="600" Margin="0,158,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="1340"
@@ -16,10 +16,10 @@
                 </Style>
             </DataGrid.ItemContainerStyle>
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Name"  Width="600" IsReadOnly="True"/>
-                <DataGridTextColumn Binding="{Binding Time}" Header="Time" Width="300" IsReadOnly="True"/>
-                <DataGridTextColumn Binding="{Binding Period}" Header="Period" Width="250" IsReadOnly="True"/>
-                <DataGridTextColumn Binding="{Binding Result}" Header="Result" Width="150" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Name}" Header="Название"  Width="600" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Time}" Header="Дата" Width="300" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Period}" Header="Длительность" Width="250" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Result}" Header="Результат" Width="150" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
         <TextBox Name="Search" HorizontalAlignment="Center" Margin="0,99,0,0" TextWrapping="Wrap" Text="Поиск" VerticalAlignment="Top" Width="1340" Height="30" FontSize="20" 
