--- a/CybersportTournament/RegistrationWindow.xaml
+++ b/CybersportTournament/RegistrationWindow.xaml
@@ -12,11 +12,11 @@
         <Label Content="Пароль:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,172,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
         <PasswordBox Name="Password" VerticalAlignment="Top" Margin="925,232,0,0" Height="60" FontSize="36" HorizontalAlignment="Left" Width="550"/>
         <Label Content="Фамилия:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,314,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
-        <TextBox Name="SecondName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,374,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
+        <TextBox Name="SecondName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,374,0,0" Height="60" Width="550" Background="White" FontSize="36" TextChanged="TextChanged"/>
         <Label Content="Имя:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,314,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
-        <TextBox Name="FirstName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,374,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
+        <TextBox Name="FirstName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,374,0,0" Height="60" Width="550" Background="White" FontSize="36" TextChanged="TextChanged"/>
         <Label Content="Отчество:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,456,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
-        <TextBox Name="MiddleName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,516,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
+        <TextBox Name="MiddleName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,516,0,0" Height="60" Width="550" Background="White" FontSize="36" TextChanged="TextChanged"/>
         <Label Content="Почта:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,456,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
         <TextBox Name="Email" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,516,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
         <Button Name="BackButton" Content="Назад" VerticalAlignment="Top" HorizontalAlignment="Left" Height="60" Width="360" Margin="350,746,0,0" Click="BackClick" FontSize="36"/>
